Rework clock handling while debugging

--- a/plugins/org.eclipse.fordiac.ide.debug.ui/src/org/eclipse/fordiac/ide/debug/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.debug.ui/src/org/eclipse/fordiac/ide/debug/ui/messages.properties
@@ -1,3 +1,15 @@
+DebugClockWidget_ClockIntervalTextLabel=T\#
+DebugClockWidget_FixedClock=Use fixed clock with specified value
+DebugClockWidget_IntervalClock=Increment clock on each event by
+DebugClockWidget_InvalidInterval=Invalid clock interval: {0}
+DebugClockWidget_InvalidMonotonicClockValue=Invalid monotonic clock value: {0}
+DebugClockWidget_InvalidRealtimeClockValue=Invalid real-time clock value: {0}
+DebugClockWidget_MonotonicClock=Monotonic Clock:
+DebugClockWidget_MonotonicClockTextLabel=T\#
+DebugClockWidget_RealtimeClock=Real-time Clock:
+DebugClockWidget_RealtimeClockTextLabel=DT\#
+DebugClockWidget_SystemClock=Use system clock
+DebugClockWidget_Title=Clock
 EvaluatorDebugFindAction_Text=&Find...
 EvaluatorDebugFindDialog_Title=Filter
 EvaluatorVariableValueEditor_Exception=An exception occurred
@@ -12,13 +24,8 @@ MainLaunchConfigurationTab_ErrorInitializingArguments=Error initializing argumen
 MainLaunchConfigurationTab_ErrorUpdatingArguments=Error updating arguments
 MainLaunchConfigurationTab_InvalidValueMessage={0} is not a valid value for variable {1} with type {2}
 MainLaunchConfigurationTab_InvalidValueTitle=Invalid Value
-
-FBLaunchConfigurationTab_ClockInterval=Clock interval:
-FBLaunchConfigurationTab_DebugTime=Debug Time
-FBLaunchConfigurationTab_ERROR_InvalidDebugTime=Invalid value for clock interval given. Must be number greater or equal to 0.
+FBDebugViewClockWidget_Apply=Apply
+FBDebugViewClockWidget_InvalidValues=Invalid Values
 FBLaunchConfigurationTab_Event=Event
-FBLaunchConfigurationTab_IncrementClockAfterEachEventBySpecifiedAmount=Increment clock after each event by specified amount
 FBLaunchConfigurationTab_KeepDebuggerRunningWhenIdle=Keep debugger running when idle
 FBLaunchConfigurationTab_RepeatEvent=Repeat event
-FBLaunchConfigurationTab_UseFixedClockWithSpecifiedTime=Use fixed clock with specified time
-FBLaunchConfigurationTab_UseSystemClock=Use system clock
