Add validation and quickfix for global constants declaration name

--- a/plugins/org.eclipse.fordiac.ide.globalconstantseditor.ui/src/org/eclipse/fordiac/ide/globalconstantseditor/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.globalconstantseditor.ui/src/org/eclipse/fordiac/ide/globalconstantseditor/ui/messages.properties
@@ -13,3 +13,4 @@
 GlobalConstantsOutlineTreeProvider_VarGlobalDeclarationBlockText=VAR_GLOBAL
 GlobalConstantsOutlineTreeProvider_VarGlobalDeclarationBlockConstantText=VAR_GLOBAL CONSTANT
 GlobalConstQuickFix_AddConstantKeyword=Add CONSTANT modifier
+GlobalConstQuickFix_RenameGlobalConstants=Rename global constants
