--- a/plugins/org.eclipse.fordiac.ide.globalconstantseditor/src/org/eclipse/fordiac/ide/globalconstantseditor/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.globalconstantseditor/src/org/eclipse/fordiac/ide/globalconstantseditor/messages.properties
@@ -10,5 +10,5 @@
  # Contributors:
  #   Martin Melik Merkumians - initial API and implementation and/or initial documentation
  ###############################################################################
- 
+GlobalConstValidator_GlobalConstantsNameMismatch=Global constants name {0} must match name of enclosing type {1}
 GlobalConstValidator_GlobalConstBlockNotMarkedConstant=Only constant VAR_GLOBAL blocks are supported, please add the CONSTANT keyword to the block.
