Validate no value for variable with variable array bounds
Validate that there must be no value for a variable with variable array
bounds (i.e., "*"). Also add helper to properly check for variable
bounds in type declaration parser and improve regexes.

--- a/plugins/org.eclipse.fordiac.ide.model/src/org/eclipse/fordiac/ide/model/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.model/src/org/eclipse/fordiac/ide/model/messages.properties
@@ -112,6 +112,7 @@ VALIDATOR_TypeNotSupported=Type {0} is not supported
 VALIDATOR_UnevenlyQuotedStringLiteral=Unevenly quoted string literal: {0}
 VALIDATOR_UNKNOWN_LITERAL_TYPE=Unknown literal type: {0}
 VarDeclarationAnnotations_MultipleInputConnections=Multiple input connections on variable
+VarDeclarationAnnotations_MustNotSpecifyValueForVariableWithVariableArrayBounds=Must not specify a value for variable with variable array bounds
 VarDeclarationAnnotations_ShouldNotSpecifyValueForGenericVariableInType=Should not specify a value for variable of generic type in defining type
 VarDeclarationAnnotations_ShouldSpecifyValueForGenericVariableInInstance=Should specify a value for unconnected variable of generic type in instance
 VarDeclarationAnnotations_VarInOutLeftNotConnected=VAR_IN_OUT ''{0}'' must be connected on the left, since it is connected on the inside
