Migrate ST highlighting from Xtend to Java and perform cleanup

--- a/plugins/org.eclipse.fordiac.ide.structuredtextcore.ui/src/org/eclipse/fordiac/ide/structuredtextcore/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.structuredtextcore.ui/src/org/eclipse/fordiac/ide/structuredtextcore/ui/messages.properties
@@ -71,6 +71,22 @@ STCoreCustomValidatorConfigurationBlock_UnnecessaryNarrowConversion=Unnecessary 
 STCoreCustomValidatorConfigurationBlock_UnnecessaryWideConversion=Unnecessary wide conversion
 STCoreCustomValidatorConfigurationBlock_WrongNameCase=Name of referenced feature has different case
 STCoreEditorPreferencePage_PerformanceModeThreshold=Performance mode threshold in lines
+STCoreHighlightingConfiguration_AlgorithmKeyword=Algorithm Keyword
+STCoreHighlightingConfiguration_DataTypes=Data Types
+STCoreHighlightingConfiguration_FunctionBlockCalls=Function Block Calls
+STCoreHighlightingConfiguration_FunctionBlockKeyword=Function Block Keyword
+STCoreHighlightingConfiguration_FunctionCalls=Function Calls
+STCoreHighlightingConfiguration_FunctionName=Function Name
+STCoreHighlightingConfiguration_FunctionReturnVariables=Function Return Variables
+STCoreHighlightingConfiguration_Functions=Functions
+STCoreHighlightingConfiguration_GlobalConstants=Global Constants
+STCoreHighlightingConfiguration_LocalVariables=Local Variables
+STCoreHighlightingConfiguration_MemberVariables=Member Variables
+STCoreHighlightingConfiguration_MethodCalls=Method Calls
+STCoreHighlightingConfiguration_MethodKeyword=Method Keyword
+STCoreHighlightingConfiguration_MethodName=Method Name
+STCoreHighlightingConfiguration_MethodReturnVariables=Method Return Variables
+STCoreHighlightingConfiguration_VariableKeyword=Variable Keyword
 STCoreHoverProvider_EventKind=EVENT
 STCoreHoverProvider_FBKind=FUNCTION_BLOCK
 STCoreHoverProvider_FBTypeKind=FUNCTION_BLOCK
