Add value converter for enumerated values

--- a/plugins/org.eclipse.fordiac.ide.model/src/org/eclipse/fordiac/ide/model/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.model/src/org/eclipse/fordiac/ide/model/messages.properties
@@ -46,6 +46,7 @@ DataTypeExporter_UNSUPPORTED_DATA_TYPE=This data type is not (yet) supported: {0
 DataTypeImporter_UNSUPPORTED_DATATYPE_IN_FILE=Unsupported data type in {0}
 DataTypeLibrary_InvalidMaxLengthInStringType=Invalid max length in string type ''{0}''
 DataTypeLibrary_MissingDatatype=Missing Datatype ''{0}''
+EnumValueConverter_NoSuchValue=No value with name {0} in enumerated type {1}
 Error_RecursiveType={0} cannot be inserted as {1} would be recursively contained!
 Error_SelfInsertion={0} cannot be inserted into itself!
 ErrorMarkerInterfaceAnnotations_MissingVariableForAttribute=Missing variable for attribute: {0}
