Introducing error markers with QuickFix support for attributes
When an attribute is deleted from the type library, a new error marker
will be created. This error marker now includes QuickFix support.
The following Quickfixes are supported:
      Change atp
      Create atp
      Suggestion of best fitting atp

--- a/plugins/org.eclipse.fordiac.ide.model.ui/src/org/eclipse/fordiac/ide/model/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.model.ui/src/org/eclipse/fordiac/ide/model/ui/messages.properties
@@ -16,6 +16,7 @@ AutoReloadError_PathNotFound=Automatic reload of editor not possible due to data
 DataTypeDropdown_Type_Selection=Type Selection
 DataTypeDropdown_Select_Type=Select a Type:
 DataTypeDropdown_Elementary_Types=Elementary Types
+AttributeTypeDropdown_Attribute_Types=Attribute Types
 DataTypeDropdown_STRUCT_Types=Structured Types
 DataTypeDropdown_Adapter_Types=Adapter Types
 DataTypeDropdown_FB_Types=FB Types
