--- a/plugins/org.eclipse.fordiac.ide.model/src/org/eclipse/fordiac/ide/model/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.model/src/org/eclipse/fordiac/ide/model/messages.properties
@@ -50,6 +50,7 @@ Error_RecursiveType={0} cannot be inserted as {1} would be recursively contained
 Error_SelfInsertion={0} cannot be inserted into itself!
 ErrorMarkerInterfaceAnnotations_MissingVariableForAttribute=Missing variable for attribute: {0}
 ErrorMarkerInterfaceAnnotations_MissingVariableForValue=Missing variable for value: {0}
+AttributeAnnotations_MissingAttributeDeclaration=Attribute Declaration ''{0}'' not found 
 FBNetworkAnnotations_CollisionMessage=Collision between {0} and {1}
 FBNetworkAnnotations_InterfaceBarCollisionMessage=Collision of {0} with Maximum Size of Interface Bar of {1}
 FBTImporter_ADAPTER_DECLARATION_TYPE_EXCEPTION=AdapterDeclaration: type has to be set\!
