--- a/plugins/org.eclipse.fordiac.ide.ui/src/org/eclipse/fordiac/ide/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.ui/src/org/eclipse/fordiac/ide/ui/messages.properties
@@ -129,11 +129,14 @@ Dialog_Repair_Remove=Remove pin from instances
 
 Repair_Dialog_Delete_Elements=Delete elements that contain missing data type
 Repair_Dialog_New_DataType=Create Missing Data Type
+Repair_Dialog_New_Attribute=Create Missing Attribute Declaration
 Repair_Dialog_Pin_Add=Add pin to definition
 Repair_Dialog_Pin_Remove=Remove pin from instances
 Repair_Dialog_FB_Title=Repair broken FB
 Repair_Dialog_New_FB=Create new FB
 Repair_Dialog_ChangeDataType=Change Data Type
+Repair_Dialog_ChangeAttribute=Change Attribute Declaration
 Repair_Dialog_ChangeFBType=Change FB Type
 Repair_Dialog_BestFitDataType=Change to: {0}
+Repair_Dialog_BestFitAttrType=Change to: {0}
 Repair_Dialog_BestFitFBType=Change to: {0}
