Add rename refactoring for function FB parameters
Add participants to handle rename refactoring for parameters of function
FBs when triggered from a caller in ST code and also from inside the ST
code of the function FB.

--- a/plugins/org.eclipse.fordiac.ide.structuredtextfunctioneditor.ui/src/org/eclipse/fordiac/ide/structuredtextfunctioneditor/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.structuredtextfunctioneditor.ui/src/org/eclipse/fordiac/ide/structuredtextfunctioneditor/ui/messages.properties
@@ -1,2 +1,4 @@
 STFunctionLabelProvider_FunctionText=FUNCTION {0}
 STFunctionQuickfixProvider_RenameFunction=Rename function to match enclosing type
+STFunctionRenameFunctionParameterRefactoringParticpant_Name=Parameters in ST code
+STFunctionRenameInterfaceParameterRefactoringParticipant_Name=Parameters from ST code
